# midigpt-REAPER

./: .gitignore  INSTRUMENTS.md  Install - Linux.sh  Install - Mac.command  Install - Windows.bat  LICENSE  README.md  Start Server - Mac.command  Start Server - Windows.bat  VST.md  build-mmm-wheel.sh  build_docs.py  build_release.sh  complete_setup.py  install-windows.sh  install.ps1  install.sh  pyproject.toml  reascript_options.sh  start_midigpt_server.sh  start_mmm_server.sh  test-windows-env.sh
docs/: index.html
scripts/: patch-mmm-windows-compat.sh  setup.py
src/Effects/MIDI-GPT/: MIDI-GPT Global Options.js  MIDI-GPT Track Options (Expressive).js  MIDI-GPT Track Options (Yellow-Ghost).js
src/Effects/MMM/: MMM Global Options.js  MMM Track Options (Density-Polyphony).js  MMM Track Options.js
src/Effects/composers_assistant_v2/: MMM Global Options
src/Scripts/MIDI-GPT/: REAPER_midigpt_infill.py  midi_extraction.py
src/Scripts/MMM/: MMM_server.py  REAPER_mmm_infill.py  REAPER_mmm_init.py  midi_extraction.py  mmm_refactored_shim.py
src/Scripts/MMM/models/: config.json  encoder_config.json
src/Scripts/composers_assistant_v2/: REAPER_replace_selected_midi_items_in_time_selection_mmm.py  mmm_nn_server.py  mymidistuff.py  rpr_ca_functions.py  rpr_mmm_functions.py
tests/: conftest.py  mmm_test.mid  mmm_test_out.mid  test_midi_extraction.py  test_server_logic.py
tests/integration/: Dockerfile  test_install.sh
