
[project]
name = "MMM-Reaper"
version = "0.0.1"
description = "Multitrack Machine Machine REAPER plugin"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.10.0"
authors = [
    { name = "Paul Triana" }
]

dependencies = [
    "mmm @ git+ssh://git@github.com:DaoTwenty/Multitrack-Music-Machine.git@dev"
]